clusters/talos-robbinsdale/apps/media/app/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  selector:
    app: radarr
  ports:
  - name: http
    port: 7878
    protocol: TCP
    targetPort: 7878
  type: ClusterIP
