clusters/talos-robbinsdale/apps/media/app/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
  annotations:
    item.homer.rajsingh.info/name: "Radarr"
    item.homer.rajsingh.info/subtitle: "Movie Collection Manager"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/Radarr/Radarr/develop/Logo/256.png"
    item.homer.rajsingh.info/tag: "media"
    item.homer.rajsingh.info/keywords: "movies, collection, automation"

    service.homer.rajsingh.info/name: "Media"
    service.homer.rajsingh.info/icon: "fas fa-tv"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
  hostnames:
    - "radarr.rajsingh.info"
    - "radarr.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: radarr
          port: 7878
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
